<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="about">About</string>
    <string name="about_copy_right">"Copyright © Huawei Technologies Co., Ltd.
All rights reserved"</string>
    <string name="about_footer">&lt;a href=0>Huawei 360 Camera User Agreement&lt;/a>&lt;br> Copyright © 2019 Huawei Device Co., Ltd. All rights reserved.</string>
    <string name="accessing_mobile_network_title">Move</string>
    <string name="accessing_mobile_network_title_content">Share large files using mobile data?</string>
    <string name="agreement_page_title">Huawei 360 Camera User Agreement</string>
    <string name="app_name">Huawei 360 Camera</string>
    <string name="app_update_busy_string">Downloading installation package…</string>
    <string name="application_update_opimization">Version update available:</string>
    <string name="application_update_opimization_title">App update</string>
    <string name="bitrate">Bitrate</string>
    <string name="broadcast_account_confirm">CONTINUE</string>
    <string name="broadcast_account_sign_out">SIGN OUT</string>
    <string name="broadcast_bad_internet_description">Your network connection is too slow for live streaming.</string>
    <string name="broadcast_bad_internet_title">Poor Internet connection</string>
    <string name="broadcast_check_start_description">Do you want to start live streaming?</string>
    <string name="broadcast_check_start_title">Start live streaming</string>
    <string name="broadcast_check_stop_description">Do you want to stop live streaming?</string>
    <string name="broadcast_check_stop_title">Stop live streaming</string>
    <string name="broadcast_client_error_description">The client encountered an error. Please check your settings or try again later.</string>
    <string name="broadcast_client_error_title">Client error</string>
    <string name="broadcast_initialize_busy">Initializing…</string>
    <string name="broadcast_internet_error_description">You are not connected to the Internet. Please check your network settings.</string>
    <string name="broadcast_internet_error_title">Internet connection error</string>
    <string name="broadcast_mobile_network_description">Using 3G/4G network to start live streaming?</string>
    <string name="broadcast_mobile_network_title">Live streaming</string>
    <string name="broadcast_no_internet_description">Unable to connect to the Internet.</string>
    <string name="broadcast_no_internet_title">No Internet connection</string>
    <string name="broadcast_server_error_description">There was a problem connecting to the server. Please check your settings or try again later.</string>
    <string name="broadcast_server_error_title">Server error</string>
    <string name="broadcast_settings">Live streaming settings</string>
    <string name="broadcast_sign_in_fail">Failed to sign in.</string>
    <string name="broadcast_stop_busy">Stopping live streaming…</string>
    <string name="broadcast_title_invalid_description">"Title must be between 1 and 128 characters long and didn't contain &lt; and >"</string>
    <string name="broadcast_title_invalid_title">Title is invalid</string>
    <string name="broadcast_wait_active">Waiting to start…</string>
    <string name="button_agree">AGREE</string>
    <string name="button_disagree">DISAGREE</string>
    <string name="camera_low_temp">Temperature too low</string>
    <string name="camera_low_temp_content">Camera functionality may be impaired in extremely low temperatures.</string>
    <string name="camera_overheat">Camera overheating</string>
    <string name="camera_overheat_first_stage">Please remove the camera, and let it cool down before reconnecting.</string>
    <string name="camera_overheat_second_stage">Camera is powering off because it is overheating. Please try re-connecting later.</string>
    <string name="camera_update">Version update</string>
    <string name="camera_update_check">You are using the latest version.</string>
    <string name="camera_update_complete">Camera updated.</string>
    <string name="camera_update_complete_title">Version update</string>
    <string name="camera_update_content">Update available. Please do not disconnect your camera during the update.</string>
    <string name="camera_update_fail">Update failed. Please try again.</string>
    <string name="camera_update_failed_error_status">Failed to update camera. Error code:</string>
    <string name="camera_update_failed_fw_upgrade_mode">Unable to update camera. Please reconnect and try again.</string>
    <string name="camera_update_failed_reconnect_camera">Failed to update camera. Please reconnect and try again.</string>
    <string name="camera_update_for_newer_camera_program">Firmware update</string>
    <string name="camera_update_for_newer_program">Firmware update</string>
    <string name="camera_update_for_update_failed">Version update</string>
    <string name="camera_update_progress">Updating firmware…</string>
    <string name="cant_show_photo_video_description">Unable to share photos/videos simultaneously</string>
    <string name="content_1">This app requires the following permissions:</string>
    <string name="dialog_launch_title">Permissions and user agreement</string>
    <string name="dialog_option_ok">OK</string>
    <string name="memory_full">Storage full</string>
    <string name="permission_1">Contacts</string>
    <string name="permission_1_content">To enable live streaming over YouTube</string>
    <string name="permission_2">Microphone</string>
    <string name="permission_2_content">To record sound when filming video or live streaming</string>
    <string name="permission_3">Storage</string>
    <string name="permission_3_content">To save pictures or videos to your phone or memory card</string>
    <string name="permission_4">Internet access</string>
    <string name="permission_4_content">To share photos and videos, or live stream online</string>
    <string name="saving_files">Saving files…</string>
    <string name="share_user_agreement_allow">AGREE</string>
    <string name="share_user_agreement_disallow">DISAGREE</string>
    <string name="user_agreement">User Agreement</string>
</resources>