<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="bottom" android:orientation="vertical" android:id="@id/dialog_huawei" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="3.0" android:paddingStart="8.0dip" android:paddingEnd="8.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/dialog_background" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="2.0">
        <LinearLayout android:orientation="vertical" android:id="@id/dialog_title_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="18.0sp" android:textColor="@color/black" android:gravity="center_horizontal" android:id="@id/dialog_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginBottom="12.0dip" android:text="@string/dialog_launch_title" />
        </LinearLayout>
        <ScrollView android:id="@id/dialog_content" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <include android:id="@id/content" android:visibility="visible" layout="@layout/launch_layout" />
        </ScrollView>
        <TextView android:textSize="14.0sp" android:textColorHighlight="@color/white" android:textColorLink="@color/iconcolor" android:id="@id/hyper_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="8.0dip" />
        <Space android:layout_width="fill_parent" android:layout_height="16.0dip" />
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="16.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip">
            <Button android:textSize="14.0sp" android:textColor="@color/iconcolor" android:id="@id/negative_button" android:background="@drawable/dialog_button_background" android:layout_width="wrap_content" android:layout_height="40.0dip" android:text="@string/button_disagree" android:layout_weight="1.0" android:textAllCaps="false" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" android:elevation="0.0dip" style="?android:attr/borderlessButtonStyle" />
            <Button android:textSize="14.0sp" android:textColor="@color/iconcolor" android:id="@id/positive_button" android:background="@drawable/dialog_button_background" android:layout_width="wrap_content" android:layout_height="40.0dip" android:text="@string/button_agree" android:layout_weight="1.0" android:textAllCaps="false" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" style="?android:attr/borderlessButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
