<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@color/black" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:background="@color/black" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="1600.0">
        <ImageView android:layout_gravity="center" android:id="@id/IV_ui_launchImage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="centerCrop" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/LL_ui_VideoPlayer" android:background="@color/black" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <GeneralFunction.Player.player.SphericalVideoPlayer android:id="@id/TV_ui_VideoPlayer" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </LinearLayout>
    <ImageView android:layout_gravity="center" android:id="@id/IV_VideoTransFrame" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="centerCrop" />
    <LinearLayout android:orientation="vertical" android:id="@id/LL_VideoCover" android:background="@color/transparent" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="1600.0">
        <Space android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="300.0" />
        <TextView android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@id/TV_VideoCover_Title" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="200.0" />
        <Space android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="550.0" />
        <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/TV_VideoCover_Dialog" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="100.0" />
        <Space android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="150.0" />
        <Button android:layout_gravity="center" android:id="@id/BT_VideoCover" android:background="@color/transparent" android:layout_width="wrap_content" android:layout_height="0.0dip" android:scaleType="center" android:layout_weight="100.0" />
        <Space android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="200.0" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/LL_ui_User_Agreement" android:focusable="true" android:focusableInTouchMode="true" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="1600.0">
        <LinearLayout android:background="@color/lightgray" android:layout_width="fill_parent" android:layout_height="0.0dip" android:weightSum="900.0" android:layout_weight="135.0">
            <TextView android:textColor="@color/black" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/user_agreement" />
        </LinearLayout>
        <ScrollView android:background="@color/ghostwhite" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1330.0">
            <WebView android:textColor="@color/black" android:id="@id/WV_ui_User_Agreement_Content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" />
        </ScrollView>
        <LinearLayout android:orientation="horizontal" android:background="@color/lightgray" android:layout_width="fill_parent" android:layout_height="0.0dip" android:weightSum="900.0" android:layout_weight="135.0">
            <Button android:layout_gravity="center" android:id="@id/B_ui_User_Agreement_Disallow" android:layout_width="0.0dip" android:layout_height="fill_parent" android:scaleType="fitCenter" android:text="@string/share_user_agreement_disallow" android:layout_weight="450.0" />
            <Button android:layout_gravity="center" android:id="@id/B_ui_User_Agreement_Allow" android:layout_width="0.0dip" android:layout_height="fill_parent" android:scaleType="fitCenter" android:text="@string/share_user_agreement_allow" android:layout_weight="450.0" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
